rbx-dom/rbx_xml/src/tests/snapshots/rbx_xml__tests__basic__write_tags.snap
---
source: rbx-dom/rbx_xml/src/tests/basic.rs
expression: "std::str::from_utf8(&encoded).unwrap()"
---
<roblox version="4">
  <Item class="Part" referent="0">
    <Properties>
      <string name="Name">Part</string>
      <BinaryString name="Tags">SGVsbG8AV29ybGQ=</BinaryString>
    </Properties>
  </Item>
</roblox>
